* 2007-08-13 - marcus.klein@open-xchange.com

 - Bugfix #8410: Removed duplicate write database connection.

* 2007-08-13 - sebastian.kauss@open-xchange.com

 - Fixed Bug #8785 - Only iCal imported fullday holiday appointments 
                     are shown on the start page. Added new ajax method 
                     newappointments for portal search.

 - Fixed Bug #8760 - Appointment conflicts were not in ajax response after
                     update request.

* 2007-08-13 - martin.kauss@open-xchange.com

 - Bugfix #8505 and #8722. Reminder data still exist after an appointment was
   deleted. In addition, an update task exist to fix corrupt data in the 
   database from older version. INFO: A config file has been changed:
   updatetasks.cfg

 - Fixed bug #8741. If the first appointment of a sequence is an exception
   the GUI gets wrong start/end dates. This has been fixed.

* 2007-08-13 - tobias.prinz@open-xchange.com

 - Bugfix #8475: Opposed to the definition, UserParticipants are not 
   supposed to be identified by e-mail address, so I changed this in 
   OXContainerConverter.
   
* 2007-08-13 - thorben.betten@open-xchange.com

 - Moved flag to store mail default folder have been checked to session due
   to new storage concept for UserSettingMail instances
 - Bugfix #8784: Mail folders with more messages than
   "imapMessageFetchLimit" defined in "imap.properties" can be sorted
   against "unread"
 - Using atomic datatypes from java.util.concurrent.atomic package for
   atomic access to monitoring variables instead of using own locking
   mechanism
 - MailWriter.getMailWriters() made static to reduce object instantiation
 - Additional methods for UserSettingMailStorage to remove single cached
   user's mail settings or whole cache
 - Bugfix #8767: Fixed new message display on portal side
 - Bugfix #8793: Starting html paragraph is skipped by html2text conversion
   to avoid double new line at the beginning
 - Reading html entities from resource: